--- a/pom.xml
+++ b/pom.xml
@@ -16,12 +16,22 @@
    <dependency>
 	<groupId>com.sun.jersey</groupId>
 	<artifactId>jersey-bundle</artifactId>
-	<version>1.19</version>
+	<version>1.18</version>
    </dependency>
    <dependency>
 	<groupId>org.codehaus.jettison</groupId>
 	<artifactId>jettison</artifactId>
 	<version>1.3.7</version>
+   </dependency>
+   <dependency>
+    <groupId>asm</groupId>
+    <artifactId>asm</artifactId>
+    <version>3.3.1</version>
+   </dependency>
+   <dependency>
+	<groupId>mysql</groupId>
+	<artifactId>mysql-connector-java</artifactId>
+	<version>5.1.17</version>
    </dependency>
   </dependencies>
   
