--- a/pom.xml
+++ b/pom.xml
@@ -2,55 +2,58 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <groupId>DEZSYS09</groupId>
-        <artifactId>DEZSYS09</artifactId>
-        <version>1.0</version>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <packaging>war</packaging>
+    <groupId>DEZSYS09</groupId>
+    <artifactId>Web-Services-in-Java</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
-    <artifactId>dezsys09-web-application</artifactId>
+    <packaging>war</packaging>
+    <name>WebServicesInJava</name>
+
+    <dependencies>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.4</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-bundle</artifactId>
+            <version>1.18</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.jettison</groupId>
+            <artifactId>jettison</artifactId>
+            <version>1.3.7</version>
+        </dependency>
+        <dependency>
+            <groupId>asm</groupId>
+            <artifactId>asm</artifactId>
+            <version>3.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.17</version>
+        </dependency>
+    </dependencies>
 
     <build>
-        <defaultGoal>clean install</defaultGoal>
-
+        <defaultGoal>clean install tomcat:run</defaultGoal>
         <plugins>
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
-                <artifactId>tomcat6-maven-plugin</artifactId>
-                <version>2.2</version>
-                <configuration>
-                    <path>/</path>
-                    <update>true</update>
-                    <url>http://localhost:8080/manager/</url>
-                    <username>tomcat</username>
-                    <password>tomcatuser</password>
-                </configuration>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.0</version>
             </plugin>
         </plugins>
     </build>
-    <dependencies>
-	 <dependency>
-	<groupId>com.sun.jersey</groupId>
-	<artifactId>jersey-bundle</artifactId>
-	<version>1.18</version>
-   </dependency>
-   <dependency>
-	<groupId>org.codehaus.jettison</groupId>
-	<artifactId>jettison</artifactId>
-	<version>1.3.7</version>
-   </dependency>
-   <dependency>
-    <groupId>asm</groupId>
-    <artifactId>asm</artifactId>
-    <version>3.3.1</version>
-   </dependency>
-   <dependency>
-	<groupId>mysql</groupId>
-	<artifactId>mysql-connector-java</artifactId>
-	<version>5.1.17</version>
-   </dependency>
-    </dependencies>
 </project>
