--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>DEZSYS09</groupId>
-    <artifactId>Web-Services-in-Java</artifactId>
+    <artifactId>WebServicesInJava</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <packaging>war</packaging>
     <name>WebServicesInJava</name>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -45,14 +49,15 @@
             <version>5.1.17</version>
         </dependency>
         <dependency>
-            <groupId>org.codehaus.groovy</groupId>
-            <artifactId>groovy</artifactId>
-            <version>2.4.4</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
     <build>
-        <defaultGoal>clean install tomcat:run</defaultGoal>
+        <defaultGoal>clean install test tomcat:run</defaultGoal>
         <plugins>
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
